# Django-template

./: .dockerignore  .gitignore  init.sql  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  authentication.py  gunicorn.config.py  logging.py  settings.py  urls.py  views.py
config/exceptions/: codes.py  exceptions.py  handler.py
config/middlewares/: authentication_middleware.py  custom_middleware.py  custom_middlewares.py  logging_middleware.py
config/response/: error_response.py  succes_response.py
config/settings/: base.py  development.py  local.py
core/: exceptions.py  models.py  tests.py  urls.py  views.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
envs/: sample
scripts/: start-dev.sh  stop-dev.sh
tests/: test_sample.py
todos/: models.py
todos/migrations/: 0001_initial.py
