[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["dylanmsk <kms920612@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.6"
django-environ = "0.11.2"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.0"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
